Thu Mar 07 09:42:42 GMT 2013  Olly Betts <olly@survex.com>

	* NEWS: Update from ChangeLog.

Sat Feb 16 08:30:59 GMT 2013  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* configure.ac: Allow TCL_INC to be passed to configure.  (fixes #612)

Wed Jan 09 11:16:53 GMT 2013  Olly Betts <olly@survex.com>

	* NEWS,configure.ac: Update for 1.2.13.

Wed Jan 09 10:45:08 GMT 2013  Olly Betts <olly@survex.com>

	* README,php/docs/index.html: Document problem with PHP 5.4.

Sat Nov 10 08:07:37 GMT 2012  Olly Betts <olly@survex.com>

	* NEWS: Update from ChangeLog.

Thu Nov 08 02:25:49 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* perl/t/databasemodified.t,perl/t/index.t,perl/t/parser.t: Using
	  UNIVERSAL::isa() as a function is deprecated.

Thu Nov 08 02:20:35 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* perl/t/parser.t: Forward port tests of StringValueRangeProcessor
	  with a prefix or suffix from 1.2's XS Search::Xapian.  (ticket#607)

Thu Nov 08 02:03:33 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* lua/util.i: Fix functor wrappers which return strings to be zero-byte
	  clean.

Thu Nov 08 01:56:23 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* configure.ac: Overhaul checking the C# tools to use modern names in
	  preference.

Mon Sep 24 11:15:35 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* lua/docs/examples/simpleexpand.lua,
	  lua/docs/examples/simplematchdecider.lua,
	  lua/docs/examples/simplesearch.lua: query:get_description() should
	  be str(query).  Fixes #600.
	* lua/docs/index.html: Document that get_description() is mapped to
	  str(), and end() to _end().

Wed Jun 27 12:12:27 GMT 2012  Olly Betts <olly@survex.com>

	* NEWS,configure.ac: Update for 1.2.12.

Tue Jun 26 11:51:43 GMT 2012  Olly Betts <olly@survex.com>

	* NEWS,configure.ac: Update for 1.2.11.
