@@ -1,3 +1,9 @@
+Thu Mar 14 11:35:36 GMT 2013  Olly Betts <olly@survex.com>
+
+	* php/Makefile.am,php/add-php-ref-handling,php/smoketest.php: Keep
+	  references to the PHP wrapper object when an object is set on
+	  another object.  (Fixes #614)
+
 Thu Mar 07 09:42:42 GMT 2013  Olly Betts <olly@survex.com>
 
 	* NEWS: Update from ChangeLog.
